name:          test-hunit-util
version:       0.1
synopsis:      Unit test utilities
description:   test routines with SHORT names and args in order like you would enter to ghci.
license:       LGPL
-- License-file:  LICENSE
author:        Harold Carr
maintainer:    harold.carr@gmail.com
build-type:    Simple
cabal-version: >= 1.18
library
  exposed-modules:  Test.HUnit.Util
  hs-source-dirs:   src
  default-language: Haskell98
  build-depends:    base >= 2.0, HUnit >= 1.2.5.2
